more header buttons closer to edge. and try to fix favorite button flicker

--- a/css/index.css
+++ b/css/index.css
@@ -163,8 +163,8 @@ body {
 .global-header > a[data-role="button"][data-icon="arrow-l"],
 .global-header > a[data-rel='back'] {
     top: 35% !important;
-    margin-left: 5% !important;
-    margin-right: 20% !important;
+    /*margin-left: 5% !important;
+    margin-right: 20% !important;*/
 }
 
 .global-content {
@@ -627,8 +627,8 @@ body {
 
 #favorites-list .global-header .favorites-list-back {
     top: 35% !important;
-    margin-left: 5% !important;
-    margin-right: 20% !important;
+    /*margin-left: 5% !important;
+    margin-right: 20% !important;*/
 }
 
 /* Pet Details */
@@ -637,13 +637,13 @@ body {
     top: 35% !important;
 }
 .detailed-result-back {
-    margin-left: 5% !important;
-    margin-right: 20% !important;
+    /*margin-left: 5% !important;
+    margin-right: 20% !important;*/
 }
 
 .detailed-result-favorite {
-    margin-right: 5% !important;
-    margin-left: 20% !important;
+    /*margin-right: 5% !important;
+    margin-left: 20% !important;*/
 }
 
 #detailed-result .detailed-result-loading {
